Fix slider fab display glitch on mobile

--- a/public/stylesheets/fourimgbox.scss
+++ b/public/stylesheets/fourimgbox.scss
@@ -45,8 +45,9 @@ $sled-padding: 8px;
   .wacky-fab {
     display: none;
     @include media-breakpoint-up(md) {
-
-      display: block;
+      &.shown {
+        display: block;
+      }
       position: absolute;
       top: ($sled-img-height / 2) - ($fab-size/2);
       height: $fab-size;
